Bug 168321 - ODF: invalid attribute for character change tracking in ODF strict
Summary: ODF: invalid attribute for character change tracking in ODF strict
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL: https://docs.oasis-open.org/office/Op...
Whiteboard: target:26.2.0 target:25.8.2
Keywords:
Depends on:
Blocks: Track-Changes-TextFormatting
  Show dependency treegraph
 
Reported: 2025-09-08 15:51 UTC by Regina Henschel
Modified: 2025-09-12 13:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2025-09-08 15:51:14 UTC
Set Load/Save to "ODF 1.4" so that it writes strict ODF.
Take a text document and write some text.
Assign a character style to a single word.
Enable recording of changes (Menu Edit > Track changes).
Assign a different character style to the same word.
Save the document.

Inspect the saved document. You will find an attribute "style-name" in the element <text:format-change> in the part content.xml. But the <text:format-change> element has no attributes.

In extended mode, LibreOffice writes a "loext:style-name" attribute. But in strict mode it must not write an attribute at all.
Comment 1 Miklos Vajna 2025-09-09 08:53:47 UTC
I'll look at this.
Comment 2 Commit Notification 2025-09-12 08:33:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5248afb9b630b5902936ea8a2f5c87248cb36dd3

tdf#168321 sw format redline, direct: fix ODF strict export

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Miklos Vajna 2025-09-12 08:34:52 UTC
Not writing the attribute is one problem, but then we should also not writer that otherwise unused autostyle, now both are done, I think.
Comment 4 Commit Notification 2025-09-12 13:58:23 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/6de684d777ccfb2a1b6f43081ca7fb53115e21d0

tdf#168321 sw format redline, direct: fix ODF strict export

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.